--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.gospelware.liquildbutton.MainActivity">
+    tools:context=".Example.MainActivity">
 
-    <com.gospelware.liquildbutton.LiquidButton
+    <com.gospelware.liquidbutton.LiquidButton
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
